# lankit

./: .gitignore  DESIGN.md  LICENSE  README.md  TESTING.md  network.schema.json  network.yml  network.yml.dist  pyproject.toml  wifi-vault.example.yml
.claude/agents/: lankit-auditor.md  lankit-doc.md  lankit-git.md  lankit-mission.md  lankit-reviewer.md  lankit-triage.md  lankit-ux.md  lankit-voice.md  mikrotik-docs.md
ansible/: site.yml
docs/: mission.md  personas.md  test-harness.md
docs/apps/: apps-internal.md  architecture.md  me-internal.md  network-internal.md  register-internal.md
docs/enhancements/: 001-readme-status-command-missing.md  002-apply-no-post-apply-verification.md  003-config-error-missing-network-yml.md  004-extend-wizard-destroys-yaml-comments.md  005-no-drift-summary-before-apply.md  006-provision-no-success-confirmation.md  007-network-yml-choose-not-validated-on-overview.md  008-rollback-no-confirmation-of-what-it-restores.md  009-design-md-audience-framing-excludes-morgan.md  010-audit-rogue-entries-no-remediation-path.md  011-network-yml-ssid-template-not-explained.md  012-router-error-on-ssh-failure-no-diagnosis.md  013-apply-segment-flag-ordering-advice-buried-in-help.md  014-no-command-for-current-state-summary.md  015-network-yml-permissions-section-missing-example-for-new-segment.md  016-rollback-card-does-not-include-wifi-passwords.md  017-probe-forward-chain-caveat-too-prominent.md  018-readme-missing-install-verification-step.md  (+7 more)
tests/: conftest.py  test_apps.py  test_me.py  test_network.py  test_register.py
(+70 files in other folders)
